RESOLVED FIXED230306
[LFC][Integration] TextBoxSelectableRange::additionalLengthAtEnd miscomputed
https://bugs.webkit.org/show_bug.cgi?id=230306
Summary [LFC][Integration] TextBoxSelectableRange::additionalLengthAtEnd miscomputed
Antti Koivisto
Reported 2021-09-15 06:23:42 PDT
It should be non-zero only if the run contains a hyphen.
Attachments
Patch (1.56 KB, patch)
2021-09-15 06:25 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-09-15 06:25:02 PDT
EWS
Comment 2 2021-09-15 07:21:56 PDT
Committed r282452 (241705@main): <https://commits.webkit.org/241705@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438242 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-15 07:22:17 PDT
Note You need to log in before you can comment on or make changes to this bug.