[LFC][Integration] TextBoxSelectableRange::additionalLengthAtEnd miscomputed https://bugs.webkit.org/show_bug.cgi?id=230306

Reviewed by Alan Bujtas.

It should be non-zero only if the run contains a hyphen. This doesn't yet affect
anything, but it will.

* layout/integration/LayoutIntegrationRunIteratorModernPath.h:
(WebCore::LayoutIntegration::RunIteratorModernPath::selectableRange const):


Canonical link: https://commits.webkit.org/241705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282452 268f45cc-cd09-0410-ab3c-d52691b4dbfc